tests/baselines/reference/contextualTypingArrayDestructuringWithDefaults.errors.txt
contextualTypingArrayDestructuringWithDefaults.ts(8,10): error TS2322: Type '{ a: number; }' is not assignable to type '1'.


==== contextualTypingArrayDestructuringWithDefaults.ts (1 errors) ====
    type I = { a: "a" };
    let [ c0 = {a: "a"} ]: [I?] = [];
    let [ x1, c1 = {a: "a"} ]: [number, I?] = [1];
    let [ c_ = {a: "a"} ]: I[] = [];
    
    // not a great example, expect an error
    function foo() {
        let {length = {a: 1}}: [number] = [1];
             ~~~~~~
!!! error TS2322: Type '{ a: number; }' is not assignable to type '1'.
        return length;
    }
    